// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 333.5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "Courier New",
        },
        Object {
          "color": "silver",
          "fontSize": 91.82266386900349,
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    Legends
  </Text>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 6.67,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "darkgray",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Courier New",
              },
              Object {
                "alignSelf": "center",
                "color": "darkgray",
                "fontSize": 30.607554623001164,
                "marginLeft": 5,
              },
            ]
          }
        >
          522 E Green St, Champaign, IL 61820
        </Text>
      </View>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 6.67,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "darkgray",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Courier New",
              },
              Object {
                "color": "darkgray",
                "fontSize": 30.607554623001164,
                "marginLeft": 5,
              },
            ]
          }
        >
          (217) 355-7674
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders with shortcode telephone 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 333.5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "Courier New",
        },
        Object {
          "color": "silver",
          "fontSize": 91.82266386900349,
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    Legends
  </Text>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 6.67,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "darkgray",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Courier New",
              },
              Object {
                "color": "darkgray",
                "fontSize": 30.607554623001164,
                "marginLeft": 5,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`renders without location 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 333.5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "Courier New",
        },
        Object {
          "color": "silver",
          "fontSize": 91.82266386900349,
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    Legends
  </Text>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 6.67,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "darkgray",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Courier New",
              },
              Object {
                "color": "darkgray",
                "fontSize": 30.607554623001164,
                "marginLeft": 5,
              },
            ]
          }
        >
          (217) 355-7674
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders without location or telephone 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 333.5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "Courier New",
        },
        Object {
          "color": "silver",
          "fontSize": 91.82266386900349,
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    Legends
  </Text>
</View>
`;

exports[`renders without phone number 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "flex": 1,
      "justifyContent": "center",
      "minHeight": 333.5,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": "Courier New",
        },
        Object {
          "color": "silver",
          "fontSize": 91.82266386900349,
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    Legends
  </Text>
  <View
    style={
      Object {
        "flexDirection": "column",
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Object {
            "alignContent": "center",
            "flexDirection": "row",
            "justifyContent": "center",
            "margin": 6.67,
          }
        }
      >
        <Text
          accessible={true}
          allowFontScaling={false}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "darkgray",
                "fontSize": 20,
              },
              undefined,
              Object {
                "fontFamily": "FontAwesome",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
            ]
          }
        >
          
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": "Courier New",
              },
              Object {
                "alignSelf": "center",
                "color": "darkgray",
                "fontSize": 30.607554623001164,
                "marginLeft": 5,
              },
            ]
          }
        >
          522 E Green St, Champaign, IL 61820
        </Text>
      </View>
    </View>
  </View>
</View>
`;
